# data_analysis_agent

./: .gitignore  HLD.md  README.md  pyproject.toml
app/: agent_graph.py  bigquery_executor.py  config.yaml  draw_graph.py  feedback.py  golden_indexer.py  pii_masker.py  report_generator.py  run_app.py  saved_reports.py  sql_engine.py  trace.py  user_preferences.py
golden_bucket/: trios.json
memory/: user_preferences.json
