[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "db-dtypes>=1.7.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-bigquery-storage>=2.39.0",
    "ipykernel>=7.3.0",
    "langgraph>=1.2.5",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "tabulate>=0.10.0",
]
